Initialize DVC with adult dataset

--- a/labs/Lab_3_data_versioning.ipynb
+++ b/labs/Lab_3_data_versioning.ipynb
@@ -322,7 +322,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.9"
+   "version": "undefined.undefined.undefined"
   },
   "orig_nbformat": 4,
   "vscode": {
