--- a/labs/Lab_1_development.ipynb
+++ b/labs/Lab_1_development.ipynb
@@ -105,8 +105,40 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 1: pure-Python & wheels\n",
+    "import sys\n",
+    "\n",
+    "!{sys.executable} -m pip install --upgrade pip setuptools wheel\n",
+    "!{sys.executable} -m pip install \\\n",
+    "    mlflow numpy pandas scikit-learn hyperopt matplotlib \\\n",
+    "    PyYAML prefect docker kubernetes google-cloud-storage \\\n",
+    "    fastapi uvicorn google-auth pylint metaflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 2: heavy native extras (DVC + psycopg2)\n",
+    "import sys\n",
+    "\n",
+    "!{sys.executable} -m pip install \\\n",
+    "    \"dvc[s3]\" \\\n",
+    "    psycopg2-binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -117,8 +149,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   },
   "orig_nbformat": 4,
   "vscode": {
